Refactoring for Spring Boot 3